[gd_scene load_steps=9 format=3 uid="uid://j5q1v7i8qh5b"]

[ext_resource type="Theme" uid="uid://bkcfr87v0i1wm" path="res://assets/theme/default_theme.tres" id="1_1jxrk"]
[ext_resource type="PackedScene" uid="uid://cuv71i0daq75d" path="res://src/main/board/Board.tscn" id="2_ebxrc"]
[ext_resource type="Script" path="res://src/main/gui/MainGUI.gd" id="2_kmyd3"]
[ext_resource type="PackedScene" uid="uid://bs02xdbf0ixhy" path="res://popup_fail.tscn" id="3_m5pag"]
[ext_resource type="FontFile" uid="uid://biij4nescr2fl" path="res://assets/font/MintsodaLimeGreen13X16Regular-4n30l.ttf" id="4_sptqa"]
[ext_resource type="PackedScene" uid="uid://dd2awwnqmbpyt" path="res://src/main/light.tscn" id="6_m0t33"]
[ext_resource type="AudioStream" uid="uid://bsph1bl4bq1ka" path="res://assets/gameSong.wav" id="7_uq2oc"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_v1lnc"]
light_mode = 1

[node name="MainGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1jxrk")
script = ExtResource("2_kmyd3")

[node name="PopupFail" parent="." instance=ExtResource("3_m5pag")]
visible = false

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 0
offset_right = 640.0
offset_bottom = 439.0
color = Color(0, 0, 0, 1)

[node name="lights" type="Node2D" parent="."]

[node name="light" parent="lights" instance=ExtResource("6_m0t33")]

[node name="light2" parent="lights" instance=ExtResource("6_m0t33")]
position = Vector2(0, 360)

[node name="light3" parent="lights" instance=ExtResource("6_m0t33")]
position = Vector2(640, 360)

[node name="light4" parent="lights" instance=ExtResource("6_m0t33")]
position = Vector2(640, 0)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_uq2oc")
autoplay = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 314.0
theme_override_constants/separation = 150

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_sptqa")
text = "score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Board" parent="VBoxContainer" instance=ExtResource("2_ebxrc")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Reload" type="Button" parent="VBoxContainer/HBoxContainer"]
material = SubResource("CanvasItemMaterial_v1lnc")
layout_mode = 2
theme_override_fonts/font = ExtResource("4_sptqa")
text = "restart"

[node name="2x2" type="Button" parent="VBoxContainer/HBoxContainer"]
material = SubResource("CanvasItemMaterial_v1lnc")
layout_mode = 2
theme_override_fonts/font = ExtResource("4_sptqa")
text = "2x2"

[node name="3x3" type="Button" parent="VBoxContainer/HBoxContainer"]
material = SubResource("CanvasItemMaterial_v1lnc")
layout_mode = 2
theme_override_fonts/font = ExtResource("4_sptqa")
text = "3x3"

[node name="4x4" type="Button" parent="VBoxContainer/HBoxContainer"]
material = SubResource("CanvasItemMaterial_v1lnc")
layout_mode = 2
theme_override_fonts/font = ExtResource("4_sptqa")
text = "4x4"

[connection signal="combine_event_happend" from="VBoxContainer/Board" to="." method="_on_board_combine_event_happend"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/2x2" to="." method="_on_x_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/3x3" to="." method="_on_x_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/4x4" to="." method="_on_x_4_pressed"]
